--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,4 @@
 yarnPath: .yarn/releases/yarn-3.2.0.cjs
+plugins:
+  - libs/yarn/plugins/hello-world/plugin-hello-world.js
+  - libs/yarn/plugins/selective-install/bundles/@yarnpkg/plugin-selective-install.js
